2008-09-15  Christian Kellner  <gicmo@gnome.org>

	* configure.ac: Fix gnome-keyring configure switch
	Patch by Rémi Cardona  <remi@gentoo.org> (#552126)

=== gvfs 0.99.7.1 ===

2008-09-09  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.ac: 0.99.7.1

2008-09-02  David Zeuthen  <davidz@redhat.com>

	* monitor/hal/ghaldrive.c: (g_hal_drive_eject_do):
	* monitor/hal/ghalmount.c: (unmount_cb), (unmount_do),
	(eject_wrapper_callback), (g_hal_mount_eject):
	* monitor/proxy/gproxymount.c: (eject_wrapper_callback),
	(g_proxy_mount_eject):
	* monitor/proxy/gproxyvolume.c: (eject_wrapper_callback):
	Remember to refcount objects (#546971).

2008-09-02  David Zeuthen  <davidz@redhat.com>

	* monitor/hal/ghalvolume.c (format_size_for_display): Add docs
	explaining why powers of 10 are used.

2008-09-02  David Zeuthen  <davidz@redhat.com>

	* monitor/hal/ghalvolume.c (do_update_from_hal): Revert patch from
	bug 550100 - we really don't want to show "61.7MB Volume" instead
	of "64M Volume".

2008-09-01  Hans Petter Jansson  <hpj@novell.com>

	* configure.ac: Post-release version bump to 0.99.7.

=== gvfs 0.99.6 ===

2008-09-01  Hans Petter Jansson  <hpj@novell.com>

	* NEWS: Update for 0.99.6.

2008-09-01  Christian Kellner  <gicmo@gnome.org>
	
	* configure.ac:
	Require libsoup >= 2.23.91

2008-09-01  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsjobpull.c:
	* daemon/gvfsjobpull.h:
	New daemon method to pull files from daemons to the local
	file system.

	* daemon/gvfsjobpush.c:
	* daemon/gvfsjobpush.h:
	New daemon method to push local files to daemons. (Replaces
	Upload)

	* daemon/gvfsjobupload.c:
	* daemon/gvfsjobupload.h:
	Replaced by Push.

	* common/gvfsdaemonprotocol.h:
	* daemon/Makefile.am:
	* daemon/gvfsbackend.c:
	* daemon/gvfsbackend.h:
	Add Push and Pull. Remove Upload.

	* client/gdaemonfile.c:	
	New transfer logic. In case of move try push/pull (with
	remove_source set to TRUE) first then fallback. In case of copy